--- a/outlier_detection_methods.ipynb
+++ b/outlier_detection_methods.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "outlier_detection_methods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOgTniGhrXfS0e0+8XjPL90",
+      "authorship_tag": "ABX9TyPWEGsnAwJLrhlomJ9Vw/EG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "df = pd.read_csv('/content/SouthGermanCredit.asc',sep=' ')\n",
         "df.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +283,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +310,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
       "source": [
         "df.describe(exclude='category')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,7 +907,7 @@
         "plt.plot(df['hoehe'])\n",
         "plt.show"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +950,7 @@
         "sns.scatterplot(y='hoehe',x='wohnzeit',hue='kredit',data=df)\n",
         "plt.show"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1038,7 @@
         "ax2.set_title('Cummulative distribution')\n",
         "plt.show()\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1067,7 +1067,7 @@
       "source": [
         "df.loc[(df['hoehe']<Q2-1.5*IQR) | (df['hoehe']>Q2+1.5*IQR)]"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1099,7 +1099,7 @@
         "print('There are {} upper outliers and {} lower outliers'.format(upper_outliers.shape[0],lower_outliers.shape[0]))\n",
         "print('The {} % of the observations are outliers'.format(fraction_outliers))"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1127,10 +1127,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TuhGJhy7fxx2",
-        "outputId": "d24b3965-0c25-4033-b4aa-bc8c26d03b6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d24b3965-0c25-4033-b4aa-bc8c26d03b6e"
       },
       "source": [
         "from scipy import stats\n",
@@ -1141,7 +1141,7 @@
         "print(np.where(z < 3))\n",
         "\n"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1242,7 +1242,7 @@
         "fig = plt.figure(figsize=(12,12))\n",
         "sns.histplot(z)\n"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1266,6 +1266,32 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mf8SR4n3o7aZ"
+      },
+      "source": [
+        "Mutual Information: Measuring how imbalanced is a categorical variable"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b2mmZZKTpBIw"
+      },
+      "source": [
+        "You could use the Shannon entropy as a measure of balance.\n",
+        "\n",
+        "Consider a set of n observations of a categorical variable that can take k possible values  If there are $c_i$ observations for each of the k possible values, the Shannon's entropy of the variable is given by: \n",
+        "\n",
+        "$H = - \\sum_{i=1}^k p_i \\log_2(p_i)$\n",
+        "\n",
+        "where p_i = \\frac{c_i}{n} is the probability of value k and H is measured in bits per value. \n",
+        "\n",
+        "Shannon's entropy takes a value 0 when there is one single class (completely umbalanced, lowest entropy, maximum predicibility) and 1 when all classes are equally represented (balanced variable, maximum entropy, highest uncertainty)."
       ]
     },
     {
