--- a/outlier_detection_methods.ipynb
+++ b/outlier_detection_methods.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "outlier_detection_methods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWEGsnAwJLrhlomJ9Vw/EG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMu7BCORs32vfXVTOcNj8rt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/raulbenitez/OUTLIER_DETETECTION/blob/main/outlier_detection_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/raulbenitez/OUTLIER_DETECTION/blob/main/outlier_detection_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -246,28 +247,27 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 164
         },
         "id": "to4nG2Ve6Ddf",
-        "outputId": "82843976-315a-4b53-b727-d4fec4d6f037"
+        "outputId": "a4e7a22e-a176-439d-96d8-759762c8bb17"
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['laufkont', 'laufzeit', 'moral', 'verw', 'hoehe', 'sparkont', 'beszeit',\n",
-              "       'rate', 'famges', 'buerge', 'wohnzeit', 'verm', 'alter', 'weitkred',\n",
-              "       'wohn', 'bishkred', 'beruf', 'pers', 'telef', 'gastarb', 'kredit'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-b666bf274d0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          ]
         }
       ]
     },
@@ -979,10 +979,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ufBpLOWWVqD7"
+      },
+      "source": [
+        "# PARAMETRIC METHODS\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "_aXzRV15XZDf"
       },
       "source": [
-        "# Statistical approaches:\n"
+        "## Univariate (unsupervised):\n"
       ]
     },
     {
@@ -991,7 +1000,7 @@
         "id": "XVVhngBhXcmZ"
       },
       "source": [
-        "## Interquantile range\n",
+        "### Interquantile range\n",
         "\n",
         "$IQR = Q_3 - Q_1$,\n",
         "\n",
@@ -1117,7 +1126,7 @@
         "id": "5JOSE-F9fwGk"
       },
       "source": [
-        "# Z-score\n",
+        "### Z-score\n",
         "\n",
         "Rescale and center the data and look for data points which are too far from zero\n",
         "\n"
@@ -1295,9 +1304,113 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bc-hZmg6VFFX"
+      },
+      "source": [
+        "### Statistical tests for outlier detection\n",
+        "\n",
+        "- Grubb's test\n",
+        "- Dixon's test\n",
+        "- Rosner's test\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EWRHU93IU0X6"
+      },
+      "source": [
+        "## Multivariate (unsupervised)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CtuialDVU-O1"
+      },
+      "source": [
+        "## Elliptic Envelope"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T1DiX_HVVAms"
+      },
+      "source": [
+        "## GMM clustering\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dvklO0yyV-hp"
+      },
+      "source": [
+        "# NONPARAMETRIC METHODS\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZgB0sVUlVOoa"
+      },
+      "source": [
+        "# Univariate (supervised)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cob5j9OVVTEe"
+      },
+      "source": [
+        "### Isolation forest\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fSRghZtpVVOI"
+      },
+      "source": [
+        "# Multivariate (unsupervised):\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0suUPO11Vau6"
+      },
+      "source": [
+        "### Local Outlier detection"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "65S31vXQVcaA"
+      },
+      "source": [
+        "# Multivariate (supervised)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_OvBgiFXWWwv"
+      },
+      "source": [
+        "### One-class SVM"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "m7ZPY1TWf0ML"
+        "id": "pDD--EAXWZQ5"
       },
       "source": [
         ""
