--- a/outlier_detection_methods.ipynb
+++ b/outlier_detection_methods.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "outlier_detection_methods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQjoLSgqQdwb2EkygC4u/Y",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMQJQrCz3XTY+wiTC3LCNw7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2320,7 +2321,7 @@
         "id": "CtuialDVU-O1"
       },
       "source": [
-        "## Elliptic Envelope"
+        "### Elliptic Envelope"
       ]
     },
     {
@@ -2379,7 +2380,7 @@
         "id": "T1DiX_HVVAms"
       },
       "source": [
-        "## GMM clustering\n"
+        "### GMM clustering\n"
       ]
     },
     {
@@ -2398,7 +2399,7 @@
         "id": "ZgB0sVUlVOoa"
       },
       "source": [
-        "# Univariate (supervised)\n"
+        "## Univariate (supervised)\n"
       ]
     },
     {
@@ -2416,7 +2417,7 @@
         "id": "fSRghZtpVVOI"
       },
       "source": [
-        "# Multivariate (unsupervised):\n"
+        "## Multivariate (unsupervised):\n"
       ]
     },
     {
@@ -2488,7 +2489,7 @@
         "id": "65S31vXQVcaA"
       },
       "source": [
-        "# Multivariate (supervised)"
+        "## Multivariate (supervised)"
       ]
     },
     {
