--- a/outlier_detection_methods.ipynb
+++ b/outlier_detection_methods.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://github.com/raulbenitez/OUTLIER_DETECTION/blob/main/outlier_detection_methods.ipynb",
-      "authorship_tag": "ABX9TyPO1xqAS2ll5aXiGsACaGfc",
+      "authorship_tag": "ABX9TyN4ig7fK3f7b1w7iQz6Bi81",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2340,12 +2340,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dhzmwILJ4QwB",
-        "outputId": "779225f1-a84d-4676-b34e-add8f29bf5c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 444
-        }
+        },
+        "id": "dhzmwILJ4QwB",
+        "outputId": "779225f1-a84d-4676-b34e-add8f29bf5c2"
       },
       "source": [
         "import numpy as np\n",
@@ -2409,11 +2409,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IBq2le9C42As",
-        "outputId": "8db46571-36bf-45f8-a763-2063ddfefe47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IBq2le9C42As",
+        "outputId": "8db46571-36bf-45f8-a763-2063ddfefe47"
       },
       "source": [
         "thres_p = 0.999\n",
@@ -2441,12 +2441,112 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C9K3_NS76Mvx",
-        "outputId": "d631293f-c06d-4b2e-dbae-a5f548ea45d3",
+        "id": "Co5e-l6T6jSz",
+        "outputId": "bf0ab5db-556b-49bf-cf3f-d72eb282716f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "prob.min(axis=1)"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3.27988114e-04, 5.52043786e-06, 2.08964676e-03, 1.65550132e-06,\n",
+              "       1.36980237e-01, 1.37630557e-04, 2.83598918e-05, 1.13992188e-05,\n",
+              "       1.94049724e-05, 7.09391337e-03, 2.62271597e-05, 4.33622553e-03,\n",
+              "       1.07283492e-03, 1.02918869e-01, 2.34618629e-08, 1.36266895e-08,\n",
+              "       8.54056937e-03, 4.93064277e-04, 1.82296342e-04, 4.12665893e-04,\n",
+              "       2.01396233e-04, 6.37507493e-05, 3.59922939e-03, 9.94550584e-05,\n",
+              "       4.59154783e-02, 7.81477837e-05, 2.64790309e-04, 3.96060697e-03,\n",
+              "       2.40770286e-04, 6.36251527e-07, 1.32861267e-05, 5.70747892e-05,\n",
+              "       5.10178689e-04, 3.63221197e-03, 3.86437465e-05, 1.21582837e-07,\n",
+              "       1.46773199e-03, 3.02529929e-07, 3.11576515e-03, 1.79688322e-03,\n",
+              "       3.88246058e-03, 3.23032717e-03, 1.56006910e-04, 2.97928420e-02,\n",
+              "       1.74303069e-03, 1.09158625e-04, 1.58434957e-03, 3.24814354e-05,\n",
+              "       1.82713073e-05, 1.05594558e-03, 3.27097695e-04, 5.03648917e-03,\n",
+              "       3.00930979e-04, 4.29041355e-05, 1.49466054e-02, 1.86481676e-04,\n",
+              "       1.23289664e-04, 2.69029033e-03, 2.86006998e-07, 3.25067511e-06,\n",
+              "       6.32995020e-05, 3.50019494e-03, 2.07448266e-07, 1.28623957e-04,\n",
+              "       4.67406087e-05, 7.12290674e-06, 6.11814913e-05, 4.63085800e-05,\n",
+              "       5.33983654e-07, 3.69280344e-07, 6.51666665e-03, 7.76742198e-06,\n",
+              "       1.04164872e-04, 4.23376821e-04, 8.73581338e-02, 1.74448120e-04,\n",
+              "       8.96959347e-07, 1.05453400e-07, 4.88715392e-04, 8.40996630e-07,\n",
+              "       6.81295146e-05, 1.72456312e-05, 4.88556008e-05, 5.25311120e-05,\n",
+              "       1.80037396e-03, 5.43892623e-06, 1.78451371e-08, 6.32627466e-05,\n",
+              "       1.74712590e-04, 1.37031705e-03, 8.90224631e-05, 4.15680814e-06,\n",
+              "       7.81442622e-05, 8.58073802e-05, 1.78880768e-07, 1.03731378e-06,\n",
+              "       2.22396961e-06, 5.55395539e-04, 9.45480101e-03, 1.84181633e-04,\n",
+              "       3.90441420e-04, 2.27150092e-06, 9.55744592e-10, 6.12829014e-07,\n",
+              "       7.38642993e-05, 5.03627972e-03, 1.91549695e-04, 2.43134930e-03,\n",
+              "       2.16425438e-06, 4.37302050e-06, 2.33546145e-04, 3.95831253e-04,\n",
+              "       1.08636339e-04, 2.65981579e-04, 5.78161322e-06, 2.09165202e-04,\n",
+              "       2.96821532e-04, 1.60259923e-02, 1.89194118e-04, 1.92914223e-06,\n",
+              "       1.90591992e-09, 8.19518756e-05, 6.21334085e-04, 1.11252000e-07,\n",
+              "       4.52447967e-04, 8.83476937e-04, 2.55134788e-07, 4.10655405e-04,\n",
+              "       2.11681540e-06, 1.03042180e-03, 2.96887585e-05, 4.25671477e-05,\n",
+              "       3.06415263e-03, 5.78008992e-06, 5.57696961e-09, 7.45461781e-07,\n",
+              "       1.94019171e-03, 7.53553317e-05, 4.84801539e-03, 2.03938073e-03,\n",
+              "       6.00103975e-05, 3.29021651e-07, 6.41673305e-06, 1.84922537e-05,\n",
+              "       3.66847092e-06, 2.19229154e-05, 5.64547785e-06, 1.47206369e-03,\n",
+              "       1.68008841e-04, 5.27682192e-06, 2.03869172e-07, 1.31651863e-01,\n",
+              "       2.61743621e-04, 4.20941368e-07, 6.99773349e-05, 3.30894088e-05,\n",
+              "       6.94343180e-02, 1.55525648e-08, 6.64859781e-08, 4.26673337e-09,\n",
+              "       9.40336681e-08, 1.99193133e-06, 2.43345750e-08, 3.05133339e-07,\n",
+              "       2.06480080e-05, 1.96557530e-04, 5.55207694e-05, 6.53250462e-06,\n",
+              "       1.12161575e-03, 3.77280163e-10, 5.29163547e-04, 1.70866586e-05,\n",
+              "       7.89923022e-04, 1.57823487e-03, 1.80066417e-07, 7.50577842e-09,\n",
+              "       1.50521687e-09, 5.29735323e-04, 2.08858026e-03, 4.25887491e-04,\n",
+              "       4.42061132e-09, 3.67756903e-05, 7.42084083e-06, 1.11683095e-02,\n",
+              "       1.04101203e-04, 1.00668851e-04, 7.60160963e-07, 9.30581058e-05,\n",
+              "       1.89240406e-05, 4.91228706e-05, 8.95757149e-05, 2.39626369e-06,\n",
+              "       6.51483161e-09, 2.19724586e-04, 1.62798495e-05, 3.94541583e-08,\n",
+              "       5.38165834e-05, 8.45370395e-06, 1.44646413e-05, 2.06409615e-04,\n",
+              "       4.88301505e-04, 2.40690637e-04, 3.87213682e-02, 3.23733110e-05,\n",
+              "       7.29590978e-07, 1.16165008e-06, 4.40881343e-04, 2.69346058e-05,\n",
+              "       4.42644310e-06, 3.96237710e-04, 1.06201038e-04, 2.46871415e-06,\n",
+              "       8.58169913e-04, 6.23026375e-04, 7.60364850e-05, 2.95950096e-07,\n",
+              "       1.23562454e-08, 5.58613519e-04, 5.59051037e-04, 3.45127481e-09,\n",
+              "       1.18339879e-04, 4.38529756e-07, 4.03945084e-03, 6.75466856e-06,\n",
+              "       1.42950641e-05, 2.08042776e-07, 1.87023430e-05, 1.13398084e-03,\n",
+              "       1.95202915e-07, 1.65209543e-05, 3.72657096e-06, 2.73850586e-04,\n",
+              "       2.50528475e-05, 2.32326148e-05, 1.18140453e-04, 1.13060927e-03,\n",
+              "       1.18216569e-03, 6.52385778e-05, 1.08194294e-04, 1.26968441e-04,\n",
+              "       6.29085516e-06, 1.77085130e-10, 3.46860658e-05, 2.61192181e-07,\n",
+              "       1.74306404e-07, 4.63565126e-04, 5.72143914e-05, 4.45481054e-04,\n",
+              "       3.51415711e-07, 2.62173929e-04, 2.03454133e-04, 8.86809367e-05,\n",
+              "       1.13901841e-05, 1.07182312e-05, 1.90037983e-06, 2.18570347e-07,\n",
+              "       8.65395343e-12, 9.18858564e-11, 1.17325755e-12, 9.16470501e-18,\n",
+              "       3.11952942e-04, 6.38910631e-02, 4.71624928e-04, 3.73996296e-09,\n",
+              "       4.23500337e-05, 1.78791664e-01, 9.92057978e-13, 5.65348156e-14,\n",
+              "       4.99444013e-02, 5.14617796e-09, 1.83350923e-05, 1.01709854e-17,\n",
+              "       9.27610354e-03, 9.65771633e-17, 1.00991114e-03, 2.15191266e-03,\n",
+              "       1.01215915e-03, 1.25892761e-04, 2.64143571e-11, 1.47180951e-08,\n",
+              "       1.43423659e-10, 2.46449296e-13, 4.78082069e-12, 3.87171042e-06,\n",
+              "       2.25847682e-04, 5.54931488e-03, 1.42782284e-08, 9.86736175e-09,\n",
+              "       1.16738795e-10, 9.22595557e-13, 2.53019932e-07, 3.33236674e-05,\n",
+              "       1.41558695e-03, 1.49937993e-13, 4.39550217e-11, 3.63296218e-11,\n",
+              "       6.96360176e-04, 1.06055850e-04, 2.68568390e-06, 9.56807223e-08])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
-        }
+        },
+        "id": "C9K3_NS76Mvx",
+        "outputId": "d631293f-c06d-4b2e-dbae-a5f548ea45d3"
       },
       "source": [
         "plt.figure(figsize=(7,7))\n",
