--- a/outlier_detection_methods.ipynb
+++ b/outlier_detection_methods.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://github.com/raulbenitez/OUTLIER_DETECTION/blob/main/outlier_detection_methods.ipynb",
-      "authorship_tag": "ABX9TyNZCiLGs11JwOqgcTtXKgnp",
+      "authorship_tag": "ABX9TyOaeGzHr9tIw7BrJtERE4Hz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,48 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/raulbenitez/OUTLIER_DETECTION/blob/main/outlier_detection_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pl_KgIK71816"
+      },
+      "source": [
+        "# OUTLIER DETECTION METHODS\n",
+        "\n",
+        "Topics\n",
+        "\n",
+        "1. Parametric methods\n",
+        "1.1 Univariate methods:\n",
+        "  - Interquantile range\n",
+        "  - z-score\n",
+        "  - Median Absolute Deviation (MAD)\n",
+        "  - Statistical tests\n",
+        "1.2 Multivariate methods:\n",
+        "  - Elliptic envelope\n",
+        "  - Gaussian Mixture Models (GMM)\n",
+        "\n",
+        "2. Non-parametric methods:\n",
+        "2.1 Univariate (unsupervised)\n",
+        "  - Local Outlier Detection\n",
+        "2.2 Multivatiate (supervised)\n",
+        "  - Isolation forest\n",
+        "  - One-Class SVM\n",
+        "3. Synthetic Toy datasets\n",
+        "\n",
+        "\n",
+        "Course materials can be found in the GitHub repository https://github.com/raulbenitez/OUTLIER_DETECTION\n",
+        "\n",
+        "Short bio:\n",
+        "\n",
+        "Raul Benitez holds a PhD in physics and is professor at the department of Automatic Control of the Universitat Politècnica de Catalunya (Barcelona, Spain). He coordinates a research group in biomedical image processing that applies machine learning methods to recognize patterns in medical images. He is author of more than 30 journal papers, 77 contributions in international conferences and principal investigator of several national and international projects.\n",
+        "\n",
+        "https://futur.upc.edu/RaulBeniteziglesias\n",
+        "\n",
+        "https://scholar.google.com/citations?user=9arewZYAAAAJ&hl=ca\n",
+        "\n",
+        "contact: raul.benitez@upc.edu"
       ]
     },
     {
@@ -55,7 +97,7 @@
         "df = pd.read_csv('https://raw.githubusercontent.com/raulbenitez/OUTLIER_DETECTION/main/SouthGermanCredit.asc',sep=' ')\n",
         "df.head()"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -255,7 +297,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +326,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +353,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +629,7 @@
       "source": [
         "df.describe(exclude='category')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +907,7 @@
         "\n",
         "sns.pairplot(df,hue='kredit')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -908,7 +950,7 @@
         "plt.plot(df['hoehe'])\n",
         "plt.show"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +993,7 @@
         "sns.scatterplot(y='hoehe',x='alter',hue='kredit',data=df)\n",
         "plt.show"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1090,7 @@
         "ax2.set_title('Cummulative distribution')\n",
         "plt.show()\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1077,7 +1119,7 @@
       "source": [
         "df.loc[(df['hoehe']<Q2-1.5*IQR)|(df['hoehe']>Q2+1.5*IQR)]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1438,7 +1480,7 @@
         "Noutliers = df.loc[(df['hoehe']<Q2-1.5*IQR)|(df['hoehe']>Q2+1.5*IQR)].shape[0]\n",
         "print('The IQR method detects {} outliers'.format(Noutliers))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1469,7 +1511,7 @@
         "print('There are {} upper outliers and {} lower outliers'.format(upper_outliers.shape[0],lower_outliers.shape[0]))\n",
         "print('The {} % of the observations are outliers'.format(fraction_outliers))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1523,7 +1565,7 @@
         "print('There are {} upper outliers and {} lower outliers'.format(upper_outliers.shape[0],lower_outliers.shape[0]))\n",
         "print('The {} % of the observations are outliers'.format(fraction_outliers))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,7 +1606,7 @@
         "sns.histplot(z)\n",
         "plt.show()\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1595,7 +1637,7 @@
         "print('z-score approach')\n",
         "print('The {} % of the observations are outliers'.format(np.array(ind_outlier).shape[1]))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1650,7 +1692,7 @@
         "print('There are {} upper outliers and {} lower outliers'.format(upper_outliers.shape[0],lower_outliers.shape[0]))\n",
         "print('The {} % of the observations are outliers'.format(fraction_outliers))\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1742,7 +1784,7 @@
         "G_statistics = np.max(np.abs(df['hoehe'] - df['hoehe'].mean())/df['hoehe'].std())\n",
         "G_statistics"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1784,7 +1826,7 @@
         "G_critical_value = numerator / denominator\n",
         "print(\"Grubbs Critical Value: {}\".format(G_critical_value))\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1817,7 +1859,7 @@
         "if (G_statistics > G_critical_value):\n",
         "  print('reject the null hypothesis of no outliers')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1850,7 +1892,7 @@
         "ind_outlier = np.argmax(np.abs(df['hoehe'] - df['hoehe'].mean())/df['hoehe'].std())\n",
         "print('The detected outlier is located at observation number {}'.format(ind_outlier))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1882,7 +1924,7 @@
       "source": [
         "df['hoehe'][ind_outlier]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1940,7 +1982,7 @@
         "df_sorted = df.sort_values(by=['hoehe'],ascending=True)\n",
         "df_sorted.head()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2143,7 +2185,7 @@
         "\n",
         "print('The lowest value is {} and its closest neighbour is {}'.format(lowest,nearest_neighbour))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2178,7 +2220,7 @@
         "Q = gap/range\n",
         "print('Q = {} '.format(Q))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2254,7 +2296,7 @@
         "plt.scatter(X[:, 0], X[:, 1], c=ground_truth)\n",
         "plt.show()\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2312,7 +2354,7 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2338,13 +2380,25 @@
         "\n",
         "https://scikit-learn.org/stable/modules/mixture.html#mixture\n",
         "\n",
-        "https://ieeexplore.ieee.org/document/8227312\n",
         "\n",
         "We model the distribution of the multidimensional observations using a mixture of gaussian distributions: \n",
         "\n",
-        "  ## $p(\\vec{x}) = \\sum_{i=1}^G \\pi_i N(\\vec{\\mu_i},\\Sigma)$\n",
+        "## $p(\\vec{x}) = \\sum_{i=1}^G \\pi_i N(\\vec{\\mu_i},\\Sigma_i)$\n",
         "\n",
-        "  ## $\\sum_{i=1}^G \\pi_i, 0\\le \\pi_i \\le 1$\n"
+        "## $\\sum_{i=1}^G \\pi_i, 0\\le \\pi_i \\le 1$\n",
+        "\n",
+        "The GMM parameters are given by $\\theta=\\{\\mu_1,\\dots,\\mu_G,\\Sigma_1,\\dots,\\Sigma_G,\\pi_1,\\dots,\\pi_G\\}$ and are estimated using the Expectation-Maximization algorithm (EM, detailed information can be found at https://stephens999.github.io/fiveMinuteStats/intro_to_em.html). \n",
+        "\n",
+        "We then check the Log-Likelihood function of the model in order to identify outliers. The likelihood function provides the probability of the observed data under the GMM model with parameters $\\theta$ (data is fixed, we evaluate the probability of a certain data point is observed from a sample of the model).  \n",
+        "\n",
+        "$\\mathcal{L}(\\theta|\\vec{x}_1,…,\\vec{x}_n)=\\prod_{i=1}^n\\sum_{k=1}^G p(\\vec{x}_i)$ (Likelihood function) \n",
+        "\n",
+        "$\\log \\mathcal{L}(\\theta|\\vec{x}_1,…,\\vec{x}_n)=\\sum_{i=1}^n \\log \\sum_{k=1}^G p(\\vec{x}_i)$ (Log-likelihood function) \n",
+        "\n",
+        "\n",
+        "A. Reddy et al., \"Using Gaussian Mixture Models to Detect Outliers in Seasonal Univariate Network Traffic,\" 2017 IEEE Security and Privacy Workshops (SPW), 2017, pp. 229-234, doi: 10.1109/SPW.2017.9.\n",
+        "\n",
+        "https://ieeexplore.ieee.org/document/8227312\n"
       ]
     },
     {
@@ -2370,7 +2424,7 @@
         "plt.title(\"GMM clustering\")\n",
         "plt.show()"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2411,7 +2465,7 @@
         "sns.histplot(loglike,kde=True)\n",
         "plt.show()"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2450,7 +2504,7 @@
         "ind_lowLL = np.where(loglike < thres_LL)\n",
         "ind_lowLL"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2493,7 +2547,7 @@
         "plt.scatter(X[ind_lowLL, 0], X[ind_lowLL, 1], c='r')\n",
         "plt.show()"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2536,9 +2590,13 @@
       "source": [
         "### Local Outlier detection \n",
         "\n",
-        "It measures the local density deviation of a given data point with respect to its neighbors. A potential outlier will present lower density than its neighbors. \n",
+        "The local outlier factor (LOF) is a measure of the local density deviation of a given data point with respect to its neighbors. A potential outlier will present lower density than its neighbors. \n",
         "\n",
-        "https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.LocalOutlierFactor.html#sklearn.neighbors.LocalOutlierFactor\n"
+        "https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.LocalOutlierFactor.html#sklearn.neighbors.LocalOutlierFactor\n",
+        "\n",
+        "Liu, Fei Tony, Ting, Kai Ming and Zhou, Zhi-Hua. “Isolation forest.” Data Mining, 2008. ICDM’08. Eighth IEEE International Conference on.\n",
+        "\n",
+        "Liu, Fei Tony, Ting, Kai Ming and Zhou, Zhi-Hua. “Isolation-based anomaly detection.” ACM Transactions on Knowledge Discovery from Data (TKDD) 6.1 (2012): 3.\n"
       ]
     },
     {
@@ -2589,7 +2647,7 @@
         "legend.legendHandles[1]._sizes = [20]\n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2627,7 +2685,7 @@
         "\n",
         "Use a Radom Forest classifier to identify outliers. The procedure is to isolate observations by randomly selecting a feature and then randomly selecting a split value between the maximum and minimum values of the selected feature.\n",
         "\n",
-        "Since recursive partitioning can be represented by a tree structure, the number of splittings required to isolate a sample is equivalent to the path length from the root node to the terminating node.\n"
+        "Since recursive partitioning can be represented by a tree structure, the number of splittings required to isolate a sample is equivalent to the path length from the root node to the terminating node. This path length, averaged over a forest of such random trees provides a measure of how likely is that an observation is an outlier. \n"
       ]
     },
     {
@@ -2687,7 +2745,7 @@
         "           loc=\"upper left\")\n",
         "plt.show()"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2747,7 +2805,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2801,7 +2859,7 @@
         "plt.scatter(X[:, 0], X[:, 1], c=ground_truth)\n",
         "plt.show()"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
